# linux-less-persistence

./: .gitignore  LICENSE.md  README.md  SECURITY.md  pyproject.toml
src/llp/: __init__.py  cli.py
src/llp/checks/: __init__.py  cron.py  runtime_process.py  shell_init.py  systemd.py  xdg_autostart.py
src/llp/core/: __init__.py  baseline.py  models.py  output.py  utils.py
